--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,4 +1,4 @@
-<div class="limiter">
+<div class="limiter animated fadeInRight">
     <div class="container-login100">
         <div class="wrap-login100 p-t-50 p-b-90">
             <form (ngSubmit)="onSubmit( registroForm )" #registroForm="ngForm" class="login100-form validate-form flex-sb flex-w">
@@ -7,22 +7,22 @@
                         Crear nueva cuenta
                     </span>
 
-                <!-- <span class="text-danger">El correo es obligatorio</span> -->
+                <span *ngIf="registroForm.submitted && registroForm.controls['email'].errors" class="text-danger animated fadeIn">El correo es obligatorio</span>
                 <div class="wrap-input100 m-b-16">
                     <input class="input100" type="email" [(ngModel)]="usuario.email" name="email" placeholder="Email" required email>
 
                     <span class="focus-input100"></span>
                 </div>
 
-                <!-- <span class="text-danger">El nombre es obligatorio</span> -->
+                <span *ngIf="registroForm.submitted && registroForm.controls['nombre'].errors" class="text-danger animated fadeIn">El nombre es obligatorio</span>
                 <div class="wrap-input100 m-b-16">
                     <input class="input100" [(ngModel)]="usuario.nombre" type="text" name="nombre" placeholder="Nombre y apellidos" required minlength="2">
 
                     <span class="focus-input100"></span>
                 </div>
 
-                <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
-                <div class="wrap-input100 m-b-16" data-validate="Password is required">
+                <span *ngIf="registroForm.submitted && registroForm.controls['password'].errors" class="text-danger animated fadeIn">La contraseña debe tener al menos 6 digitos</span>
+                <div class="wrap-input100 m-b-16">
                     <input class="input100" [(ngModel)]="usuario.password" type="password" name="password" placeholder="Password" required minlength="6">
                     <span class="focus-input100"></span>
                 </div>
@@ -36,7 +36,7 @@
                     </div>
 
                     <div>
-                        <a routerLink="/registro" class="txt1">
+                        <a routerLink="/login" class="txt1">
                                 ¿Ya tienes cuenta? / Ingresar
                             </a>
                     </div>
