--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,22 +1,21 @@
 <div class="limiter animated fadeInLeft">
     <div class="container-login100">
         <div class="wrap-login100 p-t-50 p-b-90">
-            <form class="login100-form validate-form flex-sb flex-w">
+            <form (ngSubmit)="login( loginForm )" #loginForm="ngForm" class="login100-form validate-form flex-sb flex-w">
 
                 <span class="login100-form-title p-b-51">
                     Login
                 </span>
 
-                <!-- <span class="text-danger">El correo es obligatorio</span> -->
+                <span *ngIf="loginForm.submitted && loginForm.controls['email'].errors" class="text-danger">El correo es obligatorio</span>
                 <div class="wrap-input100 m-b-16">
-                    <input class="input100" type="text" name="username" placeholder="Username">
-
+                    <input [(ngModel)]="usuario.email" class="input100" type="email" name="email" placeholder="Email" required email>
                     <span class="focus-input100"></span>
                 </div>
 
-                <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
-                <div class="wrap-input100 m-b-16" data-validate="Password is required">
-                    <input class="input100" type="password" name="pass" placeholder="Password">
+                <span *ngIf="loginForm.submitted && loginForm.controls['password'].errors" class="text-danger">La contraseña debe de ser más de 6 digitos</span>
+                <div class="wrap-input100 m-b-16">
+                    <input [(ngModel)]="usuario.password" class="input100" type="password" name="password" placeholder="Password" minlength="6" required>
                     <span class="focus-input100"></span>
                 </div>
 
