--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
-</p>
+<div class="m-5">
+    <h1>Ventana Secreta</h1>
+    <hr>
+    <button class="btn btn-danger" (click)="salir()">
+    Salir
+  </button>
+</div>
