Mostrando Mensaje de Error al Usuario si no Encuentra el usuario o hay un problema al registrarse

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -34,9 +34,15 @@
                     </div>
                 </div>
 
+                <span *ngIf="error" class="text-danger animated fadeIn">Ha ocurrdo un error al ingresar. Intente nuevamente.</span>
                 <div class="container-login100-form-btn m-t-17">
                     <button class="login100-form-btn" type="submit">
-                        Ingresar
+                        <span *ngIf="!loading">
+                            Ingresar        
+                        </span>
+                        <span *ngIf="loading">
+                            <i class="fa fa-spinner fa-spin"></i>            
+                        </span>
                     </button>
                 </div>
 
